# connect-ip-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
benches/: throughput.rs
docs/: design.md
examples/: simple_client.rs  simple_proxy.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_capsule.rs  fuzz_datagram.rs
src/: client.rs
tests/: address_capsules.rs  address_negotiation.rs  capsule_codec.rs  datagram_framing.rs  go_proxy.rs  loopback.rs  rfc_conformance.rs  route_capsules.rs  varint.rs
